--- a/core/templates/about.html
+++ b/core/templates/about.html
@@ -35,5 +35,13 @@
         text-align: right;
     }
 </style>
-
+<p>welcom to the ray project</p>
+<p>this is the dummy page for the demo app</p>
+<p>developed by Amir alasady</p>
+<p>hope you find use and value with the app and use it whisle</p>
+<p>Note: feel free to navigate the app and dont take us for granted this is just an alpha frontend for are backend system</p>
+<p>feel free to develop your own frontend with any framework by following the apis provided below</p>
+<p>Note: this frontend client is just a simple 'fixed' head for are headless api system, that uses a base account 'test_email@test.com'</p>
+<p>the auth pages 'sighn up, login' are jus ta demp showcase for the api system that can be used in a custom way</p>
+<p>thank you and have fun</p>
 {% endblock %}
